[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/other/item_slot_default_background.png" type="Texture" id=1]
[ext_resource path="res://scenes/slot/slot.gd" type="Script" id=2]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 18, 18 )

[node name="Slot" type="Panel"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderContainer" type="Node2D" parent="."]
z_index = 2
z_as_relative = false

[node name="ItemContainer" type="Node2D" parent="."]

[node name="IndexLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="gui_input" from="." to="." method="_on_Slot_gui_input"]
[connection signal="timeout" from="SlideTimer" to="." method="_on_SlideTimer_timeout"]
